<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2013 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="read">Read</string>
    <string name="app_full_name">Information Access System</string>
    <string name="char_info">Characteristics Information</string>

    <!-- Navbar items -->
    <string name="home">Home</string>
    <string name="connect">Connect</string>
    <string name="contact">Feedback</string>
    <string name="about">About</string>
    <string name="learn">How to use</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="explore">Explore</string>
    <string name="submit">Submit</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="suggestions">Suggestions …</string>
    <string name="available_devices">Available Devices</string>

    <!--  Home page  -->
    <string name="college_name">Symbiosis Institute of Technology</string>
    <string name="tag_line">Discover &amp; Explore</string>
    <string name="college_address">Lavale, Pune</string>
    <string name="learn_home">Learn</string>
    <string name="contact_home">Contact</string>
    <string name="discover_bluetooth">Discover nearby information</string>

    <!--  Days  -->
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>

    <!--  Free/Busy  -->
    <string name="free"> </string>
    <string name="busy">Lecture</string>

    <!--  Timings  -->
    <string name="lecture_1">9:15&#8211;10:10</string>
    <string name="lecture_2">10:10&#8211;11:05</string>
    <string name="lecture_3">11:05&#8211;12:00</string>
    <string name="lecture_4">12:00&#8211;1:00</string>
    <string name="lecture_5">1:00&#8211;2:00</string>
    <string name="lecture_6">2:00&#8211;2:55</string>
    <string name="lecture_7">2:55&#8211;3:50</string>
    <string name="lecture_8">3:50&#8211;4:45</string>

    <!--  About page  -->
    <string name="about_text_1">Information Access System (IAS) is a Bluetooth Energy based system which focuses on providing ease of access of information to the user.</string>
    <string name="about_text_2">This technology is devised and programmed by the students of Symbiosis Institute of Technology, Electronics and Telecommunication department which primarily focuses on providing useful, time - effective data of any space or room within the institute.</string>

    <!--  How to use page -->
    <string name="step_1">Step 1 : Tap on the connect button and allow your device to connect to the Bluetooth.</string>
    <string name="step_2">Step 2 : Once your device has been connected, tap on the desired device/room number you want your screen to display the information of. </string>
    <string name="step_3">Step 3 : If your phone is unable to scan the device, make sure you are within the range of the space or room you want to access the information of.</string>
    <string name="step_4">Once connected, you will be able to access complete information of the space.</string>

    <!--  Feedback page  -->
    <string name="question_1">Q1. Are you satisfied with our services?</string>
    <string name="question_2">Q2. Did you face any issues while using the application?</string>
    <string name="question_3">Q3. Were the data of rooms provided sufficient enough?</string>
    <string name="question_4">Q4. Would you like to suggest any improvement in our application?</string>

</resources>
