<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group_1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/connect"
            android:icon="@drawable/ic_bluetooth"
            android:title="@string/connect" />
    </group>

    <group
        android:id="@+id/group_2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/contact"
            android:icon="@drawable/ic_email"
            android:title="@string/contact" />
        <item
            android:id="@+id/about"
            android:icon="@drawable/ic_info"
            android:title="@string/about" />
        <item
            android:id="@+id/learn"
            android:icon="@drawable/ic_help"
            android:title="@string/learn" />
    </group>

</menu>