<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/char_info"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.02" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/data_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title" />

            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scrollbarSize="1dp"
                android:scrollbarThumbHorizontal="@android:color/white">

                <TableLayout
                    android:id="@+id/time_table"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone">

                    <TableRow
                        android:id="@+id/timings"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="1"
                            android:text=""
                            android:textColor="@android:color/white" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="1"
                            android:background="@drawable/cell_border"
                            android:paddingStart="4dp"
                            android:paddingEnd="4dp"
                            android:text="@string/lecture_1"
                            android:textColor="@android:color/white" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="1"
                            android:background="@drawable/cell_border"
                            android:paddingStart="4dp"
                            android:paddingEnd="4dp"
                            android:text="@string/lecture_2"
                            android:textColor="@android:color/white" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="1"
                            android:background="@drawable/cell_border"
                            android:paddingStart="4dp"
                            android:paddingEnd="4dp"
                            android:text="@string/lecture_3"
                            android:textColor="@android:color/white" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="1"
                            android:background="@drawable/cell_border"
                            android:paddingStart="4dp"
                            android:paddingEnd="4dp"
                            android:text="@string/lecture_4"
                            android:textColor="@android:color/white" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="1"
                            android:background="@drawable/cell_border"
                            android:paddingStart="4dp"
                            android:paddingEnd="4dp"
                            android:text="@string/lecture_5"
                            android:textColor="@android:color/white" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="1"
                            android:background="@drawable/cell_border"
                            android:paddingStart="4dp"
                            android:paddingEnd="4dp"
                            android:text="@string/lecture_6"
                            android:textColor="@android:color/white" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="1"
                            android:background="@drawable/cell_border"
                            android:paddingStart="4dp"
                            android:paddingEnd="4dp"
                            android:text="@string/lecture_7"
                            android:textColor="@android:color/white" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="1"
                            android:background="@drawable/cell_border"
                            android:paddingStart="4dp"
                            android:paddingEnd="4dp"
                            android:text="@string/lecture_8"
                            android:textColor="@android:color/white" />

                    </TableRow>

                    <TableRow
                        android:id="@+id/row_monday"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="1"
                            android:background="@drawable/cell_border"
                            android:text="@string/monday"
                            android:textColor="@android:color/white" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="1"
                            android:background="@drawable/cell_border"
                            android:paddingStart="4dp"
                            android:paddingEnd="4dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="1"
                            android:background="@drawable/cell_border"
                            android:paddingStart="4dp"
                            android:paddingEnd="4dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="1"
                            android:background="@drawable/cell_border"
                            android:paddingStart="4dp"
                            android:paddingEnd="4dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="1"
                            android:background="@drawable/cell_border"
                            android:paddingStart="4dp"
                            android:paddingEnd="4dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="1"
                            android:background="@drawable/cell_border"
                            android:paddingStart="4dp"
                            android:paddingEnd="4dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="1"
                            android:background="@drawable/cell_border"
                            android:paddingStart="4dp"
                            android:paddingEnd="4dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="1"
                            android:background="@drawable/cell_border"
                            android:paddingStart="4dp"
                            android:paddingEnd="4dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="1"
                            android:background="@drawable/cell_border"
                            android:paddingStart="4dp"
                            android:paddingEnd="4dp" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="1"
                            android:background="@drawable/cell_border"
                            android:text="@string/tuesday"
                            android:textColor="@android:color/white" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="1"
                            android:background="@drawable/cell_border"
                            android:text="@string/wednesday"
                            android:textColor="@android:color/white" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="1"
                            android:background="@drawable/cell_border"
                            android:text="@string/thursday"
                            android:textColor="@android:color/white" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="1"
                            android:background="@drawable/cell_border"
                            android:text="@string/friday"
                            android:textColor="@android:color/white" />
                    </TableRow>

                </TableLayout>

            </HorizontalScrollView>
        </LinearLayout>


    </ScrollView>

</android.support.constraint.ConstraintLayout>